[FIX]Se rehubicó la definición del campo x_estatus_mostrador [FIX]Se unificó toda la funcionalidad de descuentos que se encontraba en el módulo eor_purchase al discount_purchase_order [FIX]Se crearon los campos transfer_fee_id y amount_transfer_fee en el modelo account.invoice. [FIX]Se agregaron a las vistas de los módulos sale.order, purchase.order y account.invoice el formato que el cliente solicitó para el campo amount_transfer_fee(con el porciento aplicado) de los correspondientes módelos

--- a/addons/intercompany_transaction_ept/views/sale_views.xml
+++ b/addons/intercompany_transaction_ept/views/sale_views.xml
@@ -8,8 +8,13 @@
             <field name="arch" type="xml">
                 <data>
                     <field name="amount_tax" position="after">
-                        <field name="transfer_fee_id" attrs="{'invisible':[('intercompany_transfer_id','=',False)]}" readonly="1"/>
-                        <field name="amount_transfer_fee" attrs="{'invisible':[('intercompany_transfer_id','=',False)]}" readonly="1"/>
+                        <label for="" class="o_form_label">
+                            <span>Monto Costo de Transf.(<field name="transfer_fee_id"
+                                       attrs="{'invisible':[('intercompany_transfer_id','=',False)]}" nolabel="1"
+                                                              readonly="1" class="oe_inline"/>%)</span>
+                        </label>
+                        <field name="amount_transfer_fee" nolabel="1"
+                               attrs="{'invisible':[('intercompany_transfer_id','=',False)]}" readonly="1"/>
                     </field>
                     <field name="pricelist_id" position="after">
                     	<field name="intercompany_transfer_id" attrs="{'invisible':[('intercompany_transfer_id','=',False)]}" readonly="1"/>
