--- a/addons/intercompany_transaction_ept/views/sale_views.xml
+++ b/addons/intercompany_transaction_ept/views/sale_views.xml
@@ -8,7 +8,7 @@
             <field name="arch" type="xml">
                 <data>
                     <field name="amount_tax" position="after">
-                        <label for="" class="o_form_label">
+                        <label for="" class="o_form_label" attrs="{'invisible':[('intercompany_transfer_id','=',False)]}">
                             <span>Monto Costo de Transf.(<field name="transfer_fee_id"
                                        attrs="{'invisible':[('intercompany_transfer_id','=',False)]}" nolabel="1"
                                                               readonly="1" class="oe_inline"/>%)</span>
