[FIX]Se rehubicó la vista del monto de transferencia de la factura

--- a/addons/intercompany_transaction_ept/views/invoice_views.xml
+++ b/addons/intercompany_transaction_ept/views/invoice_views.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-	<record id="inter_company_transfer_ept_account_form_view" model="ir.ui.view">
-            <field name="name">inter.company.transfer.ept.invoice.view.form</field>
-            <field name="model">account.invoice</field>
-            <field name="inherit_id" ref="account.invoice_form"/>
-            <field name="arch" type="xml">
-                <data>
-                    <field name="amount_tax" position="after">
-                        <field name="intercompany_transfer_id" invisible="1"/>
-                        <field name="amount_transfer_fee" attrs="{'invisible':[('intercompany_transfer_id','=',False)]}"/>
-                    </field>
-                </data>
+    <record id="inter_company_transfer_ept_account_form_view" model="ir.ui.view">
+        <field name="name">intercompany_account_invoice_form</field>
+        <field name="model">account.invoice</field>
+        <field name="inherit_id" ref="account.invoice_form"/>
+        <field name="arch" type="xml">
+            <field name="amount_tax" position="after">
+                <field name ="intercompany_transfer_id" invisible="1"/>
+                <label for="" class="o_form_label" attrs="{'invisible':[('intercompany_transfer_id','=',False)]}">
+                            <span>Monto Costo de Transf.(<field name="transfer_fee_id"
+                                       nolabel="1" readonly="1" class="oe_inline"/>%)</span>
+                </label>
+                <field name="amount_transfer_fee" nolabel="1"
+                               attrs="{'invisible':[('intercompany_transfer_id','=',False)]}" readonly="1"/>
             </field>
-        </record>
+        </field>
+    </record>
 	</data>
 </odoo>
