[FIX]Se añadió el campo amount_transfer_fee a la vista de formulario de factura de proveedor. [FIX]Se modificó la función que genera la factura de proveedor desde la orden de compra para pasarle el valor del campo intercompany_transfer_id por contexto a la factura. [FIX]Se modificó la función finalize_invoice_move_lines del modelo account_invoice para añadir la contabilización del campo intercompany_transfer_id en las facturas de proveedor. [FIX]Se modificó la visibilidad de los campos de descuento extra en el formulario de facturas de proveedor. [FIX]Se extendió el modelo res_company para añadirle un campo de configuración para la cuenta a la que se registrará el descuento extra [FIX]Se incluyó en la vista de formulario de la compañía el campo anterior [FIX]Se añadio la contabilización de los campos de descuento extra para que se tome en cuenta en el monto a pagar.

--- a/addons/eor_purchase/views/account_invoice.xml
+++ b/addons/eor_purchase/views/account_invoice.xml
@@ -29,11 +29,15 @@
                 <field name="discount_2"/>
             </xpath>
             <field name="amount_tax" position="after">
-                <field name="maniobra_discount" widget='monetary' options="{'currency_field': 'currency_id'}"/>
-                <field name="flete_discount" widget='monetary' options="{'currency_field': 'currency_id'}"/>
-                <field name="plans_discount" widget='monetary' options="{'currency_field': 'currency_id'}"/>
+                <field name="maniobra_discount" widget='monetary' options="{'currency_field': 'currency_id'}"
+                       attrs="{'invisible': [('maniobra_discount', '=', 0)]}"/>
+                <field name="flete_discount" widget='monetary' options="{'currency_field': 'currency_id'}"
+                       attrs="{'invisible': [('flete_discount', '=', 0)]}"/>
+                <field name="plans_discount" widget='monetary' options="{'currency_field': 'currency_id'}"
+                       attrs="{'invisible': [('plans_discount', '=', 0)]}"/>
                 <field name="total_extra_discount" class="oe_subtotal_footer_separator"
-                widget='monetary' options="{'currency_field': 'currency_id'}"/>
+                       widget='monetary' options="{'currency_field': 'currency_id'}"
+                       attrs="{'invisible': [('total_extra_discount', '=', 0)]}"/>
             </field>
         </field>
     </record>
