--- a/addons/intercompany_transaction_ept/views/invoice_views.xml
+++ b/addons/intercompany_transaction_ept/views/invoice_views.xml
@@ -17,5 +17,21 @@
             </field>
         </field>
     </record>
+    <record id="inter_company_transfer_ept_account_supplier_form_view" model="ir.ui.view">
+        <field name="name">intercompany_account_supplier_invoice_form</field>
+        <field name="model">account.invoice</field>
+        <field name="inherit_id" ref="account.invoice_supplier_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//group/field[@name='amount_tax']" position="after">
+                <field name ="intercompany_transfer_id" invisible="1"/>
+                <label for="" class="o_form_label" attrs="{'invisible':[('intercompany_transfer_id','=',False)]}">
+                            <span>Monto Costo de Transf.(<field name="transfer_fee_id"
+                                       nolabel="1" readonly="1" class="oe_inline"/>%)</span>
+                </label>
+                <field name="amount_transfer_fee" nolabel="1"
+                               attrs="{'invisible':[('intercompany_transfer_id','=',False)]}" readonly="1"/>
+            </xpath>
+        </field>
+    </record>
 	</data>
 </odoo>
