--- a/addons/eor_purchase/views/res_company.xml
+++ b/addons/eor_purchase/views/res_company.xml
@@ -9,7 +9,8 @@
                 <xpath expr="//notebook/page[1]" position="after">
 					<page string="Descuentos Extra">
 						<group>
-                            <field name="discount_extra_account_id"/>
+                            <field name="id" invisible="1"/>
+                            <field name="discount_extra_account_id" domain="[('company_id', '=', id)]"/>
                 		</group>
                 	</page>
                 </xpath>
