--- a/addons/eor_purchase/views/purchase_view.xml
+++ b/addons/eor_purchase/views/purchase_view.xml
@@ -36,19 +36,19 @@
                 <field name="discount" position="attributes">
                     <attribute name="invisible">1</attribute>
                 </field>
-                <field name="order_line" position="after">
-                    <group colspan="4" col="6">
-                        <group string="Descuentos Extra" col="2" colspan="2">
+                <xpath expr="//group[hasclass('oe_subtotal_footer')]/group[hasclass('oe_right')]" position="before">
+<!--                    <group colspan="4" col="6" class="oe_subtotal_footer">-->
+                        <group string="Descuentos Extra" col="2" colspan="2" class="oe_left">
                             <field name="tipo_desc_extra" string="Tipo"/>
                             <field name="tipo_calculo_desc_extra" string="Calculo por"/>
                             <field name="cant_desc_extra" string="Cantidad"/>
                             <button name="force_amount_all" type="object" class="oe_link" icon="fa-arrow-circle-right" string="Aplicar"/>
                         </group>
-                        <group class="oe_right" colspan="2">
-                            <field name="total_desc"/>
-                        </group>
-                    </group>
-                </field>
+<!--                        <group class="oe_right" colspan="2">-->
+<!--                            <field name="total_desc"/>-->
+<!--                        </group>-->
+<!--                    </group>-->
+                </xpath>
                 <field name="product_qty" position="before">
                     <field name="stock_disponible"/>
                 </field>
