--- a/addons/eor_sale/report/sale_order.xml
+++ b/addons/eor_sale/report/sale_order.xml
@@ -3,14 +3,14 @@
     <template id="sale.report_saleorder">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="doc">
-                <t t-if="doc.amount_transfer_fee > 0" t-call="eor_purchase.report_saleorder_itc_document"
+                <t t-if="doc.amount_transfer_fee > 0" t-call="eor_sale.report_saleorder_itc_document"
                    t-lang="doc.partner_id.lang"/>
                 <t t-else="" t-call="cdfi_invoice.report_saleorder_document" t-lang="doc.partner_id.lang"/>
             </t>
         </t>
     </template>
     <template id="report_saleorder_itc_document">
-        <t t-call="eor_purchase.itc_sale_external_layout">
+        <t t-call="eor_sale.itc_sale_external_layout">
             <style>
                 #devolution-table{
                     width:100%;
