[FIX]Se añadió una validación al método del botón de confirmar de la orden de compra y el de generar factura, para evitar que se pueda continuar si está confirmando desde una compañía que no es la correspondiente a esa orden [FIX]Se añadió el atributo store=True y condicional a la función que recalcula los campos price y net_price del modelo inter_company... que se recalculaban cada vez que cambiaba el precio del producto lo que no debe ser el comportamiento deseado. [FIX]Se cambió la declaración del campo amount_transfer_fee de la factura, de related a compute, ya que no calculaba el valor al cargarse desde una orden de compra [FIX]Se comentó una función que cambiaba el valor del producto al validar la factura, que era inconsistente con el flujo deseado. [FIX]Se arregló la posición del campo monto de transferencia en la vista de orden de compra

--- a/addons/intercompany_transaction_ept/views/purchase_views.xml
+++ b/addons/intercompany_transaction_ept/views/purchase_views.xml
@@ -26,7 +26,7 @@
 																attrs="{'invisible':[('intercompany_transfer_id','=',False)]}"
 																readonly="1" nolabel="1" class="oe_inline"/>%)</span>
 						</label>
-						<field name="amount_transfer_fee" nolabel="1" attrs="{'invisible':[('intercompany_transfer_id','=',False)]}" readonly="1"/>
+						<field name="amount_transfer_fee" class="oe_right" nolabel="1" attrs="{'invisible':[('intercompany_transfer_id','=',False)]}" readonly="1"/>
                     </field>
 				</data>
 			</field>
