[FIX]Agregando el campo amount_transfer_fee a la vista de lista de facturas de clientes.

--- a/addons/intercompany_transaction_ept/views/invoice_views.xml
+++ b/addons/intercompany_transaction_ept/views/invoice_views.xml
@@ -48,5 +48,15 @@
                 </xpath>
             </field>
         </record>
+        <record id="invoice_tree_with_onboarding" model="ir.ui.view">
+            <field name="name">add field to the tree</field>
+            <field name="model">account.invoice</field>
+            <field name="inherit_id" ref="account.invoice_tree_with_onboarding"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='amount_tax_signed']" position="after">
+                    <field name="amount_transfer_fee"/>
+                </xpath>
+            </field>
+        </record>
     </data>
 </odoo>
