[FIX]Se creó el campo para las observaciones en la orden de compra [FIX]Se añadió el campo a la vista de formulario correspondiente. [FIX]Se agregó ademas el campo a todas las plantillas de infomes que se generan a partir de este documento

--- a/addons/eor_purchase/report/purchase_order.xml
+++ b/addons/eor_purchase/report/purchase_order.xml
@@ -247,8 +247,9 @@
                         </tr>
                         <tr>
                             <td style="border-top: none !important;" colspan="5">
-                                <p>
+                                <p t-if="o.observations">
                                     <strong>Observaciones:</strong>
+                                    <span t-field="doc.observations"/>
                                 </p>
                             </td>
                         </tr>
@@ -511,8 +512,9 @@
                         </tr>
                         <tr>
                             <td style="border-top: none !important;" colspan="5">
-                                <p>
+                                <p t-if="o.observations">
                                     <strong>Observaciones:</strong>
+                                    <span t-field="doc.observations"></span>
                                 </p>
                             </td>
                         </tr>
